Fix "done" button overlapping last item in IE

--- a/app/assets/styles/partials/dropdowns.scss
+++ b/app/assets/styles/partials/dropdowns.scss
@@ -106,7 +106,10 @@ md-select-menu .md-text {
 md-select-menu[multiple] {
   background: $white;
   box-sizing: border-box;
-  padding-bottom: 3em;
+
+  md-option:last-child {
+    margin-bottom: 3em;
+  }
 }
 
 .done-btn {
